# DeployMonitor

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml
developer-context/: terminal-manual.md
docs/: spec-architecture.md  spec-backend.md  spec-frontend.md  spec-navigation.md  spec-rust-patterns.md  spec-terminal.md
docs/_handoff_tmp/deploymonitor/: README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  monitoring.rs  pty.rs  scripts.rs  ssh.rs
src-tauri/src/services/: mod.rs  monitor_service.rs  pty_service.rs  script_fs_service.rs  script_log_service.rs  script_remote_service.rs  ssh_connect.rs
src/hooks/: use-drag-select.ts  use-history-filters.ts  use-live-metrics.ts  use-mock-connection.ts  use-mock-history.ts  use-mock-metrics.ts  use-mock-scripts.ts  use-mock-terminal.ts  use-overview-tips.ts  use-script-files.ts  use-script-history.ts  use-script-remote.ts  use-script-runner.ts  use-ssh-connection.ts
src/layout/mojo/: titlebar.css  titlebar.tsx
src/lib/: ansi-to-html.ts  formatters.ts  metric-charts.tsx  metric-status.tsx  metrics.ts  script-extension.tsx  script-run-utils.ts  ssh-utils.ts  tauri-commands.ts  terminal-keymap.ts  terminal-theme.ts  terminal-welcome.ts
src/stores/: use-dashboard-store.ts  use-monitor-store.ts  use-nav-store.ts  use-terminal-store.ts
src/styles/: global.css  tokens.css
src/types/: slide-message.d.ts
(+42 files in other folders)
